--- a/LightMatrixEscape/src/main/java/controllers/style.css
+++ b/LightMatrixEscape/src/main/java/controllers/style.css
@@ -1,4 +1,4 @@
-button {
+#continuebtn {
     /* Variables */
     --button_radius: 0.75em;
     --button_color: #e8e8e8;
@@ -10,7 +10,7 @@ button {
     background: var(--button_outline_color);
 }
 
-.button_top {
+#continuebtn_top {
     display: block;
     box-sizing: border-box;
     border: 2px solid var(--button_outline_color);
@@ -21,13 +21,12 @@ button {
     transform: translateY(-0.2em);
     transition: transform 0.1s ease;
 }
-
-button:hover .button_top {
+#continuebtn:hover #continuebtn_top {
     /* Pull the button upwards when hovered */
     transform: translateY(-0.33em);
 }
 
-button:active .button_top {
+#continuebtn:active #continuebtn_top {
     /* Push the button downwards when pressed */
     transform: translateY(0);
 }
