--- a/LightMatrixEscape/src/main/Resources/fxml/game_page_layout.fxml
+++ b/LightMatrixEscape/src/main/Resources/fxml/game_page_layout.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,56 +15,42 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="gamePane" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <ImageView fx:id="backgroundImageView" fitHeight="700.0" fitWidth="900.0" pickOnBounds="true">
-            <image>
-                <Image url="@../images/background.png" />
-            </image>
-        </ImageView>
-        <Slider fx:id="volumeSlider" layoutX="719.0" layoutY="670.0" prefHeight="32.0" prefWidth="181.0" value="30.0" />
-        <Text fx:id="levelText" fill="WHITE" layoutX="837.0" layoutY="18.0" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Level 1" wrappingWidth="62.66845929523731">
-            <font>
-                <Font name="Baskerville Old Face" size="18.0" />
-            </font>
-        </Text>
-        <Pane fx:id="Pane" layoutY="20.0" prefHeight="661.0" prefWidth="900.0">
-            <children>
-                <ImageView fx:id="doorImageView" fitHeight="100.0" fitWidth="87.0" layoutX="414.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../images/imageDoorClosed.png" />
-                    </image>
-                </ImageView>
-                <ImageView fx:id="detectorImageView" fitHeight="56.0" fitWidth="51.0" layoutX="355.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" rotate="29.7">
-                    <image>
-                        <Image url="@../images/imageDetector.png" />
-                    </image>
-                </ImageView>
-                <Line fx:id="lineWallTwo" endX="500.0" endY="280.0" startX="200.0" startY="280.0" stroke="#544d4d" strokeWidth="4.0" />
-                <Rectangle fx:id="flashlight" arcHeight="5.0" arcWidth="5.0" fill="#ffb01f" height="66.0" layoutX="427.0" layoutY="588.0" stroke="BLACK" strokeType="INSIDE" width="34.0" />
-                <Line fx:id="lineWallOne" endX="100.0" endY="500.0" fill="#544d4d" startX="100.0" startY="300.0" stroke="#544d4d" strokeWidth="4.0" />
-                <Rectangle fx:id="mirror1" arcHeight="5.0" arcWidth="5.0" height="165.0" layoutX="845.0" layoutY="183.0" stroke="BLACK" strokeType="INSIDE" width="14.0">
-                    <fill>
-                        <RadialGradient centerX="0.5" centerY="0.495260663507109" cycleMethod="REFLECT" radius="0.7758620689655172">
-                            <stops>
-                                <Stop>
-                                    <color>
-                                        <Color red="1.0" green="1.0" blue="1.0" />
-                                    </color>
-                                </Stop>
-                                <Stop offset="1.0">
-                                    <color>
-                                        <Color />
-                                    </color>
-                                </Stop>
-                            </stops>
-                        </RadialGradient>
-                    </fill>
-                </Rectangle>
-                <Line fx:id="lineWallThree" endX="650.0" endY="500.0" startX="850.0" startY="500.0" stroke="#544d4d" strokeWidth="4.0" />
-                <Ellipse fx:id="lightBulb" fill="#dbfc0a" layoutX="444.0" layoutY="588.0" radiusX="17.0" radiusY="18.0" stroke="BLACK" strokeType="INSIDE" />
-                <Line fx:id="lineWallFour" endX="800.0" endY="150.0" fill="#544d4d" startX="800.0" startY="30.0" stroke="#544d4d" strokeWidth="4.0" />
-            <Rectangle fx:id="mirror1Clone" arcHeight="5.0" arcWidth="5.0" height="165.0" layoutX="443.0" layoutY="266.0" stroke="BLACK" strokeType="INSIDE" width="14.0">
+<Pane fx:id="gamePaneFOne" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ImageView fx:id="backgroundImageViewFOne" fitHeight="700.0" fitWidth="900.0" pickOnBounds="true">
+         <image>
+            <Image url="@../images/background.png" />
+         </image></ImageView>
+      <Slider fx:id="volumeSliderFOne" layoutX="719.0" layoutY="670.0" prefHeight="32.0" prefWidth="181.0" value="30.0" />
+      <Text fx:id="levelTextFOne" fill="WHITE" layoutX="4.0" layoutY="17.0" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Level 1" wrappingWidth="62.66845929523731">
+         <font>
+            <Font name="Baskerville Old Face" size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="scoreTextFOne" fill="WHITE" layoutX="110.0" layoutY="696.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score" wrappingWidth="47.79296875">
+         <font>
+            <Font name="Baskerville Old Face" size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="usernameTextFOne" fill="WHITE" layoutX="2.0" layoutY="696.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="87.0">
+         <font>
+            <Font name="Baskerville Old Face" size="18.0" />
+         </font>
+      </Text>
+      <Pane fx:id="PaneFOne" prefHeight="700.0" prefWidth="900.0">
+         <children>
+            <ImageView fx:id="doorImageViewFOne" fitHeight="100.0" fitWidth="87.0" layoutX="427.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/imageDoorClosed.png" />
+               </image></ImageView>
+            <ImageView fx:id="detectorImageViewFOne" fitHeight="56.0" fitWidth="51.0" layoutX="339.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true" rotate="29.7">
+               <image>
+                  <Image url="@../images/imageDetector.png" />
+               </image></ImageView>
+            <Line fx:id="lineWallTwo" endX="500.0" endY="280.0" startX="200.0" startY="280.0" stroke="#544d4d" strokeWidth="4.0" />
+            <Rectangle fx:id="flashlightFOne" arcHeight="5.0" arcWidth="5.0" fill="#ffb01f" height="66.0" layoutX="427.0" layoutY="588.0" stroke="BLACK" strokeType="INSIDE" width="34.0" />
+            <Line fx:id="lineWallOne" endX="100.0" endY="500.0" fill="#544d4d" startX="100.0" startY="300.0" stroke="#544d4d" strokeWidth="4.0" />
+            <Rectangle fx:id="mirror1FOne" arcHeight="5.0" arcWidth="5.0" height="165.0" layoutX="845.0" layoutY="220.0" stroke="BLACK" strokeType="INSIDE" width="14.0">
                <fill>
                   <RadialGradient centerX="0.5" centerY="0.495260663507109" cycleMethod="REFLECT" radius="0.7758620689655172">
                      <stops>
@@ -80,24 +66,25 @@
                         </Stop>
                      </stops>
                   </RadialGradient>
-               </fill>
-            </Rectangle>
-            </children>
-        </Pane>
-        <MediaView fx:id="mediaView" fitHeight="10.0" fitWidth="50.0" layoutX="662.0" layoutY="681.0" />
-        <Line fx:id="lineBorderUp" endX="900.0" />
-        <Line fx:id="lineBorderLeft" endY="700.0" />
-        <Line fx:id="lineBorderRight" endX="900.0" endY="700.0" startX="900.0" />
-        <Line fx:id="lineBorderBottom" endX="900.0" endY="700.0" startY="700.0" />
-        <Label fx:id="usernameLabel" layoutX="4.0" layoutY="676.0" prefHeight="17.0" prefWidth="77.0" text="Username" textFill="WHITE">
-            <font>
-                <Font size="16.0" />
-            </font>
-        </Label>
-        <Label fx:id="scoreLabel" layoutX="3.0" layoutY="-2.0" text="Score" textFill="WHITE">
-            <font>
-                <Font size="17.0" />
-            </font>
-        </Label>
-    </children>
+               </fill></Rectangle>
+            <Line fx:id="lineWallThree" endX="650.0" endY="500.0" startX="850.0" startY="500.0" stroke="#544d4d" strokeWidth="4.0" />
+            <Ellipse fx:id="lightBulbFOne" fill="#dbfc0a" layoutX="444.0" layoutY="588.0" radiusX="17.0" radiusY="18.0" stroke="BLACK" strokeType="INSIDE" />
+            <Line fx:id="lineWallFour" endX="800.0" endY="150.0" fill="#544d4d" startX="800.0" startY="30.0" stroke="#544d4d" strokeWidth="4.0" />
+            <Button fx:id="btnNextGame" layoutX="308.0" layoutY="422.0" mnemonicParsing="false" text="Click For Next Level" textAlignment="CENTER" textFill="#432323">
+               <font>
+                  <Font name="Californian FB Italic" size="35.0" />
+               </font>
+            </Button>
+            <ImageView fx:id="imageLightBulbFOne" fitHeight="131.0" fitWidth="98.0" layoutX="401.0" layoutY="570.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/imageLightBulb.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
+      <MediaView fx:id="mediaViewFOne" fitHeight="10.0" fitWidth="50.0" layoutX="662.0" layoutY="681.0" />
+      <Line fx:id="lineBorderUpFOne" endX="900.0" />
+      <Line fx:id="lineBorderLeftFOne" endY="700.0" />
+      <Line fx:id="lineBorderRightFOne" endX="900.0" endY="700.0" startX="900.0" />
+      <Line fx:id="lineBorderBottomFOne" endX="900.0" endY="700.0" startY="700.0" />
+   </children>
 </Pane>
